--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "web3-wallet": "~0.0.2"
+    "web3-wallet": "~0.0.2",
+    "file-upload": "~1.6.3"
   },
   "devDependencies": {}
 }
