bitballoon deploy + env variables in GULP file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "bitballoon": "^0.2.2",
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^1.1.1",
@@ -10,6 +11,7 @@
     "gulp-cache": "^0.2.8",
     "gulp-changed": "^1.0.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-env": "^0.4.0",
     "gulp-flatten": "0.0.4",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
