--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "web3-wallet": "~0.0.2",
-    "file-upload": "~1.6.3"
+    "file-upload": "~1.6.3",
+    "ipfs-upload": "sponnet/ipfs-upload"
   },
   "devDependencies": {}
 }
